[package]
name = "webcam"
version = "1.0.0"
edition = "2021"

[dependencies]
ws = "0.9.2"
rscam = "0.5.5"
x264-dev = "0.2.0"
# x264-sys = "0.2.0"
dcv-color-primitives = "0.5.0"
uuid = { version = "1.1.0", features = ["v4"] }
fast_image_resize = "0.9.2"
# image = "0.24.2"
anyhow = "1"
once_cell = "1.12.0"

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'